# rust-query

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md
.cargo/: mutants.toml
benches/tpc-c/: delivery.rs  emulated_user.rs  expect.rs  main.rs  new_order.rs  order_status.rs  payment.rs  populate.rs  stock_level.rs
chinook/: Cargo.toml  build.rs  migrate.sql
chinook/src/: main.rs  schema.rs
examples/: axum_tokio.rs  blog.rs  chinook.rs  delete.rs  empty_table.rs  expense.rs  insert_and_select.rs  jiff.rs  new_blog.rs  query_optional.rs  queue.rs  table_from.rs  unchecked.rs
examples/chinook/: main.rs  tables.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_tokenizer.rs
rust-query-macros/: Cargo.toml
rust-query-macros/src/: dummy.rs  fields.rs  from_row.rs  lib.rs  migrations.rs  multi.rs  parse.rs  table.rs  unique.rs
src/: _datetime.md  _guide.md  aggregate.rs  alias.rs  ast.rs  async_db.rs  client.rs  db.rs  dummy.rs  dummy_impl.rs  error.rs  exec.rs  from_row.rs  group.rs  hash.rs  insert.rs  joinable.rs  lazy.rs  lib.rs  lower.rs  migrate.rs  mutable.rs  mutants.rs  mymap.rs  pool.rs  pragma.rs  query.rs  ref_cast_impl.rs  rows.rs  schema.rs  schema_pragma.rs  select.rs  sql.rs  sync.rs  token.rs  transaction.rs  value.rs  writable.rs
src/database/: transaction.md  transaction_mut.md  transaction_mut_ok.md
src/lower/: emit.rs  list_writer.rs  ord_rc.rs
src/migrate/: config.rs  fix_by_copy.rs  fix_indices.rs  migration.rs  test.rs
src/schema/: _schema.md  canonical.rs  check_constraint.rs  diff.rs  from_db.rs  from_macro.rs  parse_result.dbg  read.rs  test.rs  tokenizer.rs
src/value/: aggregate.rs  db_typ.rs  from_expr.rs  into_expr.rs  jiff_operations.rs  operations.rs  operations_old.rs  optional.rs  trivial.rs  types.rs
tests/: bad-use.rs  chinook.rs  tpc_c.rs
tests/chinook/: main.rs  migrate.sql  schema.rs
tests/chinook/expect/: artist_details.dbg  artist_details.plan  avg_album_track_count_for_artist.dbg  avg_album_track_count_for_artist.plan  count_reporting.plan  customer_spending.plan  filtered_track.dbg  filtered_track.plan  genre_statistics.plan  high_avg_invoice_total.dbg  high_avg_invoice_total.plan  invoice_info.dbg  invoice_info.plan  playlist_track_count.dbg  playlist_track_count.plan  ten_space_tracks.dbg  ten_space_tracks.plan  the_artists.dbg  the_artists.plan  top_tracks.dbg  top_tracks.plan
tests/chinook_schema/: migrate.sql  mod.rs
tests/chinook_tests/: avg_album_track_count_for_artist.dbg  count_reporting.dbg  customer_spending.dbg  genre_statistics.dbg  invoice_info.dbg  list_all_genres.dbg
tests/compile/: aggregate_invariant.rs  aggregate_invariant.stderr  aggregate_scope.rs  aggregate_scope.stderr  client_get.rs  client_get.stderr  db_invariant.rs  db_invariant.stderr  id_column.rs  id_column.stderr  iterator_invalidation.rs  iterator_invalidation.stderr  leak_migration.rs  leak_migration.stderr  mutate_unique.rs  mutate_unique.stderr  no_reference.rs  no_reference.stderr  optional_invariant.rs  optional_invariant.stderr  schema_does_not_exist.rs  schema_does_not_exist.stderr  schema_types.rs  schema_types.stderr  schema_types_row.rs  schema_types_row.stderr  table_does_not_exist.rs  table_does_not_exist.stderr  transaction_invariant.rs  transaction_invariant.stderr  unique_column_does_not_exists.rs  unique_column_does_not_exists.stderr  unique_migration.rs  unique_migration.stderr  use_after_free.rs  use_after_free.stderr
tests/tpc_c/: delivery.rs  emulated_user.rs  expect.rs  main.rs  new_order.rs  order_status.rs  payment.rs  populate.rs  stock_level.rs
tests/tpc_c/expect/: customer.plan  district.plan  history.plan  item.plan  new_order.plan  order.plan  stock.plan  warehouse.plan
