[workspace]
members = ["rust-query-macros"]

[package]
name = "rust-query"
version = "0.6.1"
edition = "2024"
description = "A query builder using rust concepts."
categories = ["database"]
repository = "https://github.com/LHolten/rust-query/"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[[bench]]
name = "tpc-c"
harness = false

[dependencies]
sea-query = { version = "=1.0.0-rc.17", default-features = false, features = ["backend-sqlite"] }
sea-query-rusqlite = "=0.8.0-rc.8"
rusqlite = { version = "0.37", features = ["modern_sqlite"] }
k12 = { version = "0.3", optional = true }
rust-query-macros = { path = "rust-query-macros", version = "=0.6.1" }
pretty_assertions = "1.4.1"
r2d2_sqlite = "0.31.0"
r2d2 = "0.8"
static_assertions = "1.1.0"
self_cell = "1.2.1"
parking_lot = "0.12.5"
slab = "0.4.11"

[dev-dependencies]
trybuild = "1.0.114"
expect-test = "1"
rand = "0.9.2"
indicatif = "0.18.2"

[features]
default = ["dev"]
bundled = ["rusqlite/bundled"]
dev = ["dep:k12"]
