[workspace]
members = ["rust-query-macros"]

[package]
name = "rust-query"
version = "0.6.8"
edition = "2024"
description = "A query builder using rust concepts."
categories = ["database"]
repository = "https://github.com/LHolten/rust-query/"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[[bench]]
name = "tpc-c"
harness = false

[[example]]
name = "axum_tokio"
test = true
[[example]]
name = "blog"
test = true
[[example]]
name = "delete"
test = true
[[example]]
name = "empty_table"
test = true
[[example]]
name = "expense"
test = true
[[example]]
name = "insert_and_select"
test = true
[[example]]
name = "new_blog"
test = true
[[example]]
name = "query_optional"
test = true
[[example]]
name = "queue"
test = true
[[example]]
name = "table_from"
test = true
[[example]]
name = "unchecked"
test = true

[dependencies]
sea-query = { version = "=1.0.0-rc.17", default-features = false, features = ["backend-sqlite"] }
sea-query-rusqlite = "=0.8.0-rc.8"
rusqlite = { version = "0.37", features = ["modern_sqlite"] }
k12 = { version = "0.3", optional = true }
rust-query-macros = { path = "rust-query-macros", version = "=0.6.8" }
r2d2_sqlite = "0.31.0"
r2d2 = "0.8"
static_assertions = "1.1.0"
self_cell = "1.2.1"
parking_lot = "0.12.5"
slab = "0.4.11"
annotate-snippets = "0.12.9"
sqlite3-parser = "0.15.0"
mutants = { version = "=0.0.3", optional = true }

[dev-dependencies]
trybuild = "1.0.114"
expect-test = "1"
rand = "0.9.2"
indicatif = "0.18.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
mutants = "=0.0.3"

[features]
default = ["dev"]
bundled = ["rusqlite/bundled"]
dev = ["dep:k12"]

# this adds some additional default impls to help cargo-mutants.
# do not enable this for for other reasons.
mutants = ["dep:mutants"]
