[workspace]
members = ["rust-query-macros", "fuzz"]

[package]
name = "rust-query"
version = "0.9.0"
edition = "2024"
description = "A query builder using rust concepts."
categories = ["database"]
repository = "https://github.com/LHolten/rust-query/"
license = "MIT OR Apache-2.0"
rust-version = "1.95"

[[bench]]
name = "tpc-c"
harness = false

[[example]]
name = "axum_tokio"
test = true
[[example]]
name = "blog"
test = true
[[example]]
name = "delete"
test = true
[[example]]
name = "empty_table"
test = true
[[example]]
name = "expense"
test = true
[[example]]
name = "insert_and_select"
test = true
[[example]]
name = "new_blog"
test = true
[[example]]
name = "query_optional"
test = true
[[example]]
name = "queue"
test = true
[[example]]
name = "table_from"
test = true
[[example]]
name = "unchecked"
test = true
[[example]]
name = "jiff"
test = true
harness = false
required-features = ["jiff-02"]

[[test]]
name = "chinook"
required-features = ["jiff-02"]

[dependencies]
rusqlite = { version = "0.39", default-features = false, features = ["cache"] }
k12 = { version = "0.3", optional = true }
rust-query-macros = { path = "rust-query-macros", version = "=0.7.0" }
static_assertions = "1.1.0"
self_cell = "1.2.1"
parking_lot = "0.12.5"
slab = "0.4.11"
annotate-snippets = "0.12.9"
mutants = { version = "=0.0.3", optional = true }
jiff = { version = "0.2.22", optional = true }

[dev-dependencies]
trybuild = "1.0.114"
expect-test = "1"
rand = "0.10.1"
indicatif = "0.18.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }

[features]
default = ["base0"]
bundled = ["rusqlite/bundled", "rusqlite/functions"]
dev = ["dep:k12"]
jiff-02 = ["dep:jiff", "rusqlite/functions"]
# this feature is required for everything, it allows making
# anything optional without breaking dependent crates.
base0 = []

# this adds some additional default impls to help run cargo-mutants on rust-query.
# do not enable this for other reasons.
__mutants = ["dep:mutants"]

[package.metadata.docs.rs]
features = ["dev", "jiff-02"]
