[package]
name = "rust-query-macros"
version = "0.4.4"
edition = "2021"
description = "Proc-macro crate for rust-query."
repository = "https://github.com/LHolten/rust-query/"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.82"
quote = "1.0.36"
syn = { version = "2.0.63", features = ["full"] }
heck = "0.5.0"

[dev-dependencies]
ref-cast = "1.0.23"
rust-query = { path = ".." }
