[package]
name = "rust-query-macros"
version = "0.6.1"
edition = "2021"
description = "Proc-macro crate for rust-query."
repository = "https://github.com/LHolten/rust-query/"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.103", features = ["span-locations"] }
quote = "1.0.42"
syn = { version = "2.0.109", features = ["full"] }
heck = "0.5.0"

[dev-dependencies]
rust-query = { path = ".." }
